@@ -50,7 +50,9 @@ define function, begin
 26,setNPCframe,2,0,0        # (who,frame) frame is 0 or 1
 27,suspendoverlay,0         # turns off overhead tiles
 28,playsong,1,0             # play song(#)
+28,playmusic,1,0            # play song(#)
 29,stopsong,0               # stop the music
+29,stopmusic,0              # stop the music
 30,keyval,2,0,0             # check key/joystick/virtual scancode state bits (scancode, joystick num)
 31,rankincaterpillar,1,0    # finds the heros position in the caterpillar
 32,showbackdrop,1,0         # showbackdrop (#)
@@ -224,6 +226,7 @@ define function, begin
 201,systemminute,0
 202,systemsecond,0
 203,currentsong,0
+203,currentmusic,0
 204,getheroname,2,0,0         # (string, hero) - puts the name of hero(hero) in string(string)
 205,setheroname,2,0,0         # (string, hero) - sets the name of hero(hero) to string(string)
 206,getitemname,2,0,0         # (string, item) - puts the name of item(item) in string(string)
